--- a/src/home-loggedin.html
+++ b/src/home-loggedin.html
@@ -5,5 +5,13 @@ loggedin: true
 ---
 
 <main>
-  <div class="h-80 flex items-center justify-center">Home but logged in</div>
+  <div class="home">
+    <div class="container mx-auto relative"></div>
+
+    {% include "components/homepage/sectionHeroSearch.html" %} {% include
+    "components/homepage/sectionContent.html" %} {% include
+    "components/homepage/sectionTrendingCollections.html" %} {% include
+    "components/homepage/sectionPopularSearch.html" %} {% include
+    "components/homepage/sectionFeaturedContributors.html" %}
+  </div>
 </main>
