--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ title: "YAYImages - HTML Template - Search Page"
               <span class="text-brand-accent">145+</span> countries
             </p>
 
-            {{ Button.btn("Start Downloading") }}
+            {{ Button.btn("Start Downloading", "/create-account") }}
           </div>
           <div class="flex flex-col md:flex-row mditems-center mt-24 py-10">
             <span class="text-brand-body1 font-inter text-sm mr-4 mb-3 md:mb-0"
@@ -126,7 +126,7 @@ title: "YAYImages - HTML Template - Search Page"
               Create an account and have an smooth creative flow by downloading
               royalty-free images, videos and vectors for your projects
             </p>
-            <div>{{ Button.btn("Join Now") }}</div>
+            <div>{{ Button.btn("Join Now", "/create-account") }}</div>
           </div>
         </div>
       </div>
