add pricing page

--- a/src/pricing.html
+++ b/src/pricing.html
@@ -3,6 +3,267 @@ layout: layouts/base.html
 title: "YAYImages - HTML Template - Pricing Page"
 ---
 
+{% import "components/homepage/feature.html" as Feature %} {% import
+"components/button.html" as Button %}
+
 <main>
-  <div class="h-80 flex items-center justify-center">Pricing</div>
+  <section class="py-16">
+    <div class="container mx-auto">
+      <div class="md:mb-10">
+        <h1 class="typography-h2 mb-10">
+          Choose a membership that fits your needs
+        </h1>
+        <p class="typography-subtitle-1 max-w-[600px]">
+          Buy a subscription and gain access to our ever growing collection of
+          high-quality stock assets.
+        </p>
+      </div>
+      <div
+        class="flex-col md:flex-row flex-wrap gap-6 md:gap-16 md:gap-y-8 items-center hidden md:flex"
+      >
+        <div
+          class="text-lg text-brand-accent flex gap-2 items-center font-inter"
+        >
+          <svg
+            width="21"
+            height="18"
+            viewBox="0 0 21 18"
+            fill="none"
+            stroke="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1.3335 15.2L12.1956 6.39999L19.1667 12.4"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <ellipse
+              cx="4.33301"
+              cy="5.2"
+              rx="1"
+              ry="1.2"
+              fill="currentColor"
+            />
+            <path
+              d="M1.5 11.2L3.83333 9.60001L6.16667 11.2"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <rect x="1" y="1" width="18" height="16" rx="2" stroke-width="2" />
+          </svg>
+
+          12 million+ Stock Images
+        </div>
+        <div
+          class="text-lg text-brand-accent flex gap-2 items-center font-inter"
+        >
+          <svg
+            width="21"
+            height="18"
+            viewBox="0 0 21 18"
+            fill="none"
+            stroke="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <rect
+              x="1"
+              y="1"
+              width="13.7377"
+              height="16"
+              rx="2"
+              stroke-width="2"
+            />
+            <path
+              d="M19.9998 2.57144L15.4097 7.28573V11.1429L19.9998 15.4286V2.57144Z"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M5.90137 12.8571V5.14282L10.4915 8.99997L5.90137 12.8571Z"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+
+          250k+ HD Videos
+        </div>
+        <div
+          class="text-lg text-brand-accent flex gap-2 items-center font-inter"
+        >
+          <svg
+            width="21"
+            height="18"
+            viewBox="0 0 21 18"
+            stroke="currentColor"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1 1V14.7143C1 15.4762 1.45714 17 3.28571 17C5.11429 17 15.019 17 19.7429 17"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M13.1889 7.0492C12.1722 6.94328 10.0122 8.17701 10.2489 9.62059C10.5151 11.2445 11.6426 12.0268 13.0871 11.9718C14.5317 11.9167 16.2031 11.0318 16.8829 9.07845C18.0563 5.70641 16.1798 2.01657 10.8845 3.52036C5.58915 5.02415 6.18208 9.1969 6.23713 10.6415"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+
+          2.5 million + Vectors
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="-mt-16 md:mt-0 py-16">
+    <div class="container mx-auto relative">
+      <div class="grid md:grid-cols-2 gap-12 lg:gap-24">
+        <div class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4">
+          <h3 class="typography-h3">Unlimited Plan 🚀</h3>
+          <p class="[&>span]:text-brand-accent text-lg mb-2">
+            <span>Unlimited downloads</span> on all of our files.
+          </p>
+          <ul class="[&>li]:mb-3 mb-4">
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> Extended
+              License
+            </li>
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> Cancel at
+              anytime. No strings attached.
+            </li>
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> Upgrade or
+              downgrade your membership freely.
+            </li>
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> $25,000
+              Copyright protection guarantee of your downloads.
+            </li>
+          </ul>
+          <div class="mt-auto flex flex-col xl:flex-row gap-4 xl:items-center">
+            <div
+              class="xl:w-1/2 font-medium gap-6 text-lg flex justify-between items-end"
+            >
+              Starting from $8.25/month
+            </div>
+            <div class="flex-1">
+              <a
+                href="/create-account"
+                class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white cursor-pointer hover:bg-brand-accentDark transition block text-center"
+              >
+                Subsribe Now
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4">
+          <h3 class="typography-h3">Lifetime Membership 🔥</h3>
+          <p class="[&>span]:text-brand-accent text-lg mb-2">
+            Pay <span>once</span> — enjoy creative access <span>forever</span>
+          </p>
+          <ul class="[&>li]:mb-3 mb-4">
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> Extended
+              License
+            </li>
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> 10 downloads
+              a day, with mothtly rollover on unused downloads!
+            </li>
+            <li class="flex font-inter gap-4 items-center">
+              <img src="../assets/img/icons/list-checkmark.svg" /> $25,000
+              Copyright protection guarantee of your downloads.
+            </li>
+          </ul>
+          <div class="mt-auto flex flex-col xl:flex-row gap-4 xl:items-center">
+            <div
+              class="xl:w-1/2 font-medium gap-6 text-lg flex justify-between items-end"
+            >
+              <div>
+                <div
+                  class="bg-brand-xl-lightgray px-2 py-1 text-sm text-brand-accent inline-block rounded-md mb-2"
+                >
+                  Save up to 25%!
+                </div>
+                <div class="text-lg">Special Offer 14 Seats Left!</div>
+              </div>
+              <div class="flex flex-col items-end">
+                <div class="text-brand-body1 line-through">$199</div>
+                <div
+                  class="text-2xl text-transparent bg-clip-text bg-gradient-to-r from-[#3532D1] via-[#943685] to-[#F13A3A]"
+                >
+                  $149
+                </div>
+              </div>
+            </div>
+            <div class="flex-1">
+              <a
+                href="/create-account"
+                class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white cursor-pointer hover:bg-brand-accentDark transition block text-center"
+              >
+                Subsribe Now
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="py-16">
+    <div class="container mx-auto relative">
+      <div class="flex flex-col md:flex-row gap-6 md:gap-20 justify-between">
+        <div class="md:max-w-[500px]">
+          <h3 class="typography-h3 mb-8 md:mb-16">
+            Find Exactly What You are Looking For
+          </h3>
+          <div class="[&>p]:mb-6 text-brand-body1 text-xl">
+            <p>
+              With our optimised search engine, you are able to tune your search
+              to the fullest extent.
+            </p>
+            <p>
+              Search by: color hues, number of people, image search, text space
+              search, orientation and many more!
+            </p>
+          </div>
+        </div>
+        <div>
+          <img src="../assets/img/pricing-duo-images.png" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="py-16">
+    <div class="container mx-auto relative">
+      <h3
+        class="typography-h3 flex flex-wrap items-center text-center justify-center mb-16"
+      >
+        With your Subscription you can:
+      </h3>
+      <div class="flex flex-col md:grid grid-cols-2 lg:grid-cols-4 gap-8">
+        {{ Feature.item("Cancel at any time", "Cancel your subscritpion whenever
+        you feel like it. <br />
+        No strings attached. ", "../assets/img/icons/feature-cancel.svg") }} {{
+        Feature.item("Copyright Protection", "All your dowloads are protected by
+        our copyright protection guarantee.",
+        "../assets/img/icons/feature-copyright.svg") }} {{
+        Feature.item("Extended License", "With our Extended License you can:
+        Print-on-demand, advertising, a client's website, your own website,
+        books, web design templates, presentations, youtube, movies and more. ",
+        "../assets/img/icons/feature-contract.svg") }} {{
+        Feature.item("Flexibility", "Updgrade and dowgrade plans freely to fit
+        your needs.", "../assets/img/icons/feature-flexibility.svg") }}
+      </div>
+    </div>
+  </section>
 </main>
