--- a/src/vector-illustrations.html
+++ b/src/vector-illustrations.html
@@ -4,5 +4,7 @@ title: "YAYImages - HTML Template - Vector Page"
 ---
 
 <main>
-  <div class="h-80 flex items-center justify-center">Vector</div>
+  <div class="h-80 flex items-center justify-center">
+    Not available in Figma
+  </div>
 </main>
