--- a/src/video-footage.html
+++ b/src/video-footage.html
@@ -4,5 +4,7 @@ title: "YAYImages - HTML Template - Video Page"
 ---
 
 <main>
-  <div class="h-80 flex items-center justify-center">Videos</div>
+  <div class="h-80 flex items-center justify-center">
+    Not available in Figma
+  </div>
 </main>
