--- a/src/images.html
+++ b/src/images.html
@@ -5,7 +5,7 @@ title: "YAYImages - HTML Template - Images Page"
 
 {% import "components/homepage/collection.html" as Collection %}
 
-<main>
+<main class="images explore">
   <section class="py-16">
     <div class="container mx-auto">
       <div class="mb-10">
@@ -18,7 +18,7 @@ title: "YAYImages - HTML Template - Images Page"
     </div>
     <div class="scrolled-container">
       <div
-        class="scrolled-inner flex gap-6 overflow-scroll snap-mandatory snap-x px-16 scrollbar-hide flex-nowrap py-2"
+        class="scrolled-inner flex gap-6 overflow-scroll snap-mandatory md:snap-none snap-x px-0 md:px-16 scrollbar-hide flex-nowrap py-2"
       >
         {{ Collection.item("Christmas",
         "../assets/img/collections/christmas.webp") }}{{ Collection.item("Dog",
