--- a/src/pricing.html
+++ b/src/pricing.html
@@ -6,7 +6,7 @@ title: "YAYImages - HTML Template - Pricing Page"
 {% import "components/homepage/feature.html" as Feature %} {% import
 "components/button.html" as Button %}
 
-<main>
+<main class="pricing pb-10">
   <section class="py-16">
     <div class="container mx-auto">
       <div class="md:mb-10">
@@ -125,7 +125,9 @@ title: "YAYImages - HTML Template - Pricing Page"
   <section class="-mt-16 md:mt-0 py-16">
     <div class="container mx-auto relative">
       <div class="grid md:grid-cols-2 gap-12 lg:gap-24">
-        <div class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4">
+        <div
+          class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4 bg-white"
+        >
           <h3 class="typography-h3">Unlimited Plan 🚀</h3>
           <p class="[&>span]:text-brand-accent text-lg mb-2">
             <span>Unlimited downloads</span> on all of our files.
@@ -156,7 +158,7 @@ title: "YAYImages - HTML Template - Pricing Page"
             </div>
             <div class="flex-1">
               <a
-                href="/create-account"
+                href="/create-account?test=1"
                 class="rounded-md py-2.5 lg:py-3.5 px-10 lg:px-14 bg-brand-accent text-white cursor-pointer hover:bg-brand-accentDark transition block text-center"
               >
                 Subsribe Now
@@ -164,7 +166,9 @@ title: "YAYImages - HTML Template - Pricing Page"
             </div>
           </div>
         </div>
-        <div class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4">
+        <div
+          class="shadow-carousel rounded-xl p-8 lg:p-10 flex flex-col gap-4 bg-white"
+        >
           <h3 class="typography-h3">Lifetime Membership 🔥</h3>
           <p class="[&>span]:text-brand-accent text-lg mb-2">
             Pay <span>once</span> — enjoy creative access <span>forever</span>
@@ -197,11 +201,7 @@ title: "YAYImages - HTML Template - Pricing Page"
               </div>
               <div class="flex flex-col items-end">
                 <div class="text-brand-body1 line-through">$199</div>
-                <div
-                  class="text-2xl text-transparent bg-clip-text bg-gradient-to-r from-[#3532D1] via-[#943685] to-[#F13A3A]"
-                >
-                  $149
-                </div>
+                <div class="text-2xl text-gradient-1">$149</div>
               </div>
             </div>
             <div class="flex-1">
@@ -266,4 +266,7 @@ title: "YAYImages - HTML Template - Pricing Page"
       </div>
     </div>
   </section>
+
+  {% include "components/section-review.html" %} {% include
+  "components/section-faq.html" %}
 </main>
